...
            "value" : "Discard"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "放弃"
          }
        }
      }
    },
    "editor_cross_day_msg" : {
      "extractionState" : "stale",
...
            "value" : "Discard Changes"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "放弃修改"
          }
        }
      }
    },
    "editor_discard_msg" : {
      "extractionState" : "stale",
...
            "value" : "Retry location"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "重新获取位置"
          }
        }
      }
    },
    "editor_placeholder_edit" : {
      "extractionState" : "stale",
...
            "value" : "Save Anyway"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "仍然保存"
          }
        }
      }
    },
    "editor_save_exit" : {
      "extractionState" : "stale",
...
            "value" : "Center"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "居中"
          }
        }
      }
    },
    "editor_tool_italic" : {
      "extractionState" : "stale",
...
            "value" : "List"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "列表"
          }
        }
      }
    },
    "editor_tool_quote" : {
      "extractionState" : "stale",
...
            "value" : "Quote"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "引用"
          }
        }
      }
    },
    "editor_tool_strike" : {
      "extractionState" : "stale",
...
            "value" : "Paragraph Style"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "段落样式"
          }
        }
      }
    },
    "editor_tool_todo" : {
      "extractionState" : "stale",
...
            "value" : "Write"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "写日记"
          }
        }
      }
    },
    "index_yesterday" : {
      "extractionState" : "stale",
...
            "value" : "Save"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "search_all_loc" : {
      "extractionState" : "stale",
...
            "value" : "No place recorded"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "未记录地点"
          }
        }
      }
    },
    "search_loc_picker" : {
      "extractionState" : "stale",
...
            "value" : "Choose a location"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "选择地点"
          }
        }
      }
    },
    "search_placeholder" : {
      "extractionState" : "stale",
...
            "value" : "Overwrite existing"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "覆盖已有日记"
          }
        }
      }
    },
    "settings_import_skip" : {
      "extractionState" : "stale",
...
            "value" : "Skip existing"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "跳过已有日记"
          }
        }
      }
    },
    "settings_import_sub" : {
      "extractionState" : "stale",
...
            "value" : "Settings"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "settings_version" : {
      "extractionState" : "stale",
...
